# solstone

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  APPS.md  CALLOSUM.md  CHANGELOG.md  CONTRIBUTING.md  CORTEX.md  CRUMBS.md  DOCTOR.md  INSTALL.md  JOURNAL.md  Makefile  README.md  conftest.py  hear.sh  identity.md  pyproject.toml  search_ping_identity.py  see.sh  sol.py  sunstone.py
.codex/rules/: solstone.rules
.opencode/: opencode.json
.vit/: .gitignore  config.json  following.json
apps/: README.md  __init__.py  utils.py
apps/activities/: _day.html  _dev_screens_detail.html  _dev_screens_list.html  (+4 more)
config/: journal.json
convey/: DESIGN.md  README.md  __init__.py  apps.py  auth.py  bridge.py  callosum_bridge.py  chat.py  chat_stream.py  cli.py  config.py  copy.py  cortex_utils.py  gentag.py  maint.py  maint_cli.py  pairing.py  push.py  restart.py  root.py  screenshot.py  state.py  system.py  task_runner.py  triage.py  utils.py  voice.py
docs/: APPS.md  BACKLOG.md  CALLOSUM.md  CONVEY.md  CORTEX.md  DOCTOR.md  FORK.md  INSTALL.md  INTEGRATION_TESTS.md  JOURNAL.md  MULTI_DEVICE.md  MUSE.md  OBSERVE.md  PROMPT_TEMPLATES.md  PROVIDERS.md  ROADMAP.md  SCREEN_CATEGORIES.md  SOLCLI.md  THINK.md  VENDOR.md  coding-standards.md  deletion-sites-inventory.md  environment.md  index.html  project-structure.md  testing.md
dream/: README.md  __init__.py  cortex_client.py  cortex_utils.py  entity_review.py  extract.py  meeting_calendar.py  push.py  review.py  state.py  task_runner.py  tasks.py  utils.py  wslog.py
fixtures/: gemini_look.json  gemini_mic.json  journal_stats.json  ponder.crumbs  ponder_day.crumbs  reduce_screen.md
hear/: README.md  __init__.py  audio_detect.py  audio_utils.py  capture.py  empty_trash.py  file_graph.py  gemini.py  gemini_mic.py  gemini_mic.txt  input_delay.py  input_detect.py  live.py  merge_best.py  pyproject.toml  runner.py  split.py  transcribe.py  transcribe.txt
journal/: AGENTS.md
muse/: README.md  __init__.py  activities.md  activities.py  activity.md  activity_state.md  activity_state.py  agents.py  anthropic.py  anticipation.md  anticipation.py  batch.py  chat.md  chat_context.py  claude.py  cli.py  coder.md  conversation_memory.py  cortex.py  cortex_client.py  daily_news.md  daily_schedule.md  daily_schedule.py  decisionalizer.md  decisions.md  default.md  documentation.md  entities.md  entities.py  facet_newsletter.md  facets.md  files.md  firstday_checkin.py  flow.md  followups.md  google.py  heartbeat.md  help.md  importer.md  joke_bot.md  (+32 more)
observe/: README.md  __init__.py  aruco.py  describe.json  describe.md  describe.py  describe.txt  describe_json.txt  describe_meeting.txt  describe_text.txt  detect.py  diarize.py  enrich.md  enrich.py  enrich.txt  export.py  extract.py  extract.txt  grab.py  hear.py  interpret.py  observer.py  observer_cli.py  observer_client.py  plaud.py  reduce.py  reduce.txt  remote.py  remote_cli.py  remote_client.py  revai.py  screen.py  see.py  sense.py  sync.py  transcribe.py  transcribe.txt  transfer.py  utils.py  vad.py
scratch/: design-convey-error-wave0.md  design-convey-error-wave1.md  design-convey-error-wave2.md  design-convey-error-wave3.md  link-blindness-grep.txt
scripts/: check_extras_consistency.py  check_layer_hygiene.py  check_rename.py  cleanroom-install.sh  doctor.py  gate_agents_rename.py  generate_agents_md.py  install_parakeet_model.py  migrate_insights_to_agents.py  release.sh  sign-and-notarize-helper.sh
see/: README.md  __init__.py  dbus_watch.py  describe.py  gemini_look.py  gemini_look.txt  pyproject.toml  reduce.py  reduce.txt  runner.py  scan.py  screen_compare.py  screen_dbus.py  screen_watch.py
sol/: .gitignore  agency.md  awareness.md  history.jsonl  identity.md  identity_pulse.md  partner.md  pulse_output.md  self.md
solstone/: __init__.py
talent/: _routine_context.py  activities.py  activity_state.py  anticipation.py  awareness_tender.md  chat.md  chat.schema.json  chat_context.py  coder.md  conversation.md  conversation_memory.py  daily_schedule.md  daily_schedule.py  decisionalizer.md  decisionalizer.py  decisions.md  digest.md  documents.md  documents.py  entities.md  entities.py  event.md  exec.md  exec_context.py  facet_newsletter.md  firstday_checkin.md  flow.md  followups.md  heartbeat.md  joke_bot.md  knowledge_graph.md  meetings.md  messaging.md  morning_briefing.md  naming.md  observation.md  observation.py  observation_review.md  occurrence.md  occurrence.py  (+24 more)
tests/: _baseline_harness.py  agents_stub.py  conftest.py  run_mcp_stub.py  test_action_logging.py  test_activities.py  test_activities_cli_create.py  test_activities_locking.py  test_activity_record_merge.py  test_activity_state.py  test_activity_state_machine.py  test_activity_state_machine_durability.py  test_activity_state_machine_hysteresis.py  test_admin_day_view.py  test_admin_view.py  test_agent.py  test_agent_fallback.py  test_agent_instructions.py  test_agents_check.py  test_agents_history.py  test_agents_ndjson.py  test_agents_view.py  test_anthropic.py  test_anthropic_cli.py  test_api_baselines.py  test_app_activities.py  test_app_agents.py  test_app_calendar.py  test_app_events.py  test_app_generators.py  test_app_import_journal.py  test_app_insights.py  test_app_reflections.py  test_app_sol.py  test_app_support.py  test_app_utils.py  test_apps.py  test_apps_skills_call.py  test_aruco.py  test_awareness.py  (+354 more)
think/: README.md  __init__.py  _extraction_utils.py  activities.py  activity_state_machine.py  agent.py  agent.txt  agent_check.py  agent_session.py  agents.py  anthropic.py  anticipate.txt  anticipation.txt  awareness.py  batch.py  border_detect.py  call.py  callosum.py  capture_health.py  chat_cli.py  chat_formatter.py  claude.py  cluster.py  cluster_day.py  cluster_glob.py  cogitate_policy.py  config_cli.py  conversation.py  cortex.py  cortex_client.py  cortex_client_sync.py  created_detect.py  crumbs.py  deferred_deletes.py  detect.py  detect_border.py  detect_created.md  detect_created.py  detect_created.schema.json  detect_created.txt  (+109 more)
(+2079 files in other folders)
