[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solstone"
version = "0.1.0"
description = "Navigate Intelligently - A collection of utilities for multimodal navigation and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Jer+AI", email = "jeremie.miller@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["audio", "transcription", "screenshot", "multimodal", "ai", "gemini"]

dependencies = [
    # Core dependencies
    "python-dotenv",
    "google-genai",
    "fastmcp",
    "Flask[async]",
    "flask-sock",
    "Markdown",
    "mistune",

    # Natural language time parsing
    "timefhuman",
    "Pillow",
    "numpy",
    # Linux-only: GNOME/GTK integration
    "PyGObject; sys_platform == 'linux'",
    "dbus-next; sys_platform == 'linux'",
    # macOS-only: PyObjC for activity detection
    "pyobjc-core; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "desktop-notifier",
    "av",

    "sqlite-utils",
    "openai>=1.2.0",
    "openai-agents>=0.1.0",
    "anthropic",
    "genai-prices",
    "pypdf",
    "watchfiles",
    "blessed>=1.20.0",
    "psutil",
    "tzlocal",
    "python-slugify",
    "platformdirs",

    # Audio processing
    "soundcard",
    "soundfile",
    "pyannote.audio>=4,<5",
    "scipy",  # Required by pyannote internals
    "faster-whisper>=1.0.0",
    "resemblyzer>=0.1.0",
    "librosa>=0.10.0",

    # Media processing
    "opencv-python",

    # Additional AI SDKs
    "claude-agent-sdk>=0.1.0",

    # Development tools
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "playwright>=1.40.0",
    "requests",
]

[project.scripts]
solstone = "think.solstone:main"
convey = "convey.cli:main"
convey-restart = "convey.restart:main"
convey-screenshot = "convey.screenshot:main"
think-insight = "think.insight:main"
think-cluster = "think.cluster:main"
think-planner = "think.planner:main"
think-journal-stats = "think.journal_stats:main"
think-importer = "think.importer:main"
think-dream = "think.dream:main"
muse-mcp-tools = "muse.mcp:main"
think-indexer = "think.indexer:main"
muse-agents = "muse.agents:main"
muse = "muse.cli:main"
think-supervisor = "think.supervisor:main"
think-detect-created = "think.detect_created:main"
think-manage = "think.manage:main"
muse-cortex = "muse.cortex:main"
think-callosum = "think.callosum:main"
think-messages = "think.messages:main"
observer = "observe.observer:main"
observe-linux = "observe.linux.observer:main"
observe-macos = "observe.macos.observer:main"
observe-transcribe = "observe.transcribe:main"
observe-interpret = "observe.interpret:main"
observe-describe = "observe.describe:main"
observe-sense = "observe.sense:main"
observe-sync = "observe.sync:main"
think-formatter = "think.formatters:main"

[project.urls]
Homepage = "https://github.com/solpbc/solstone"
Repository = "https://github.com/solpbc/solstone"
Documentation = "https://github.com/solpbc/solstone/blob/main/README.md"
"Bug Tracker" = "https://github.com/solpbc/solstone/issues"

[tool.setuptools.packages.find]
include = ["apps*", "think*", "convey*", "observe*", "muse*"]

[tool.setuptools.package-data]
apps = ["*/templates/*.html"]
think = ["*.txt", "insights/*.txt"]
muse = ["agents/*.txt", "agents/*.json"]
observe = ["*.txt", "*.json"]
convey = [
    "templates/*.html",
    "static/*",
]

# Development tools configuration
[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.flake8]
# No line length restrictions
extend-ignore = ["W503", "W504"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests", "apps"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
