[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solstone"
version = "0.1.0"
description = "Navigate Intelligently - A collection of utilities for multimodal navigation and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Jer+AI", email = "jeremie.miller@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["audio", "transcription", "screenshot", "multimodal", "ai", "gemini"]

dependencies = [
    # Core dependencies
    "python-dotenv",
    "google-genai",
    "fastmcp",
    "Flask[async]",
    "flask-sock",
    "Markdown",
    "mistune",
    "python-frontmatter",

    # Natural language time parsing
    "timefhuman",
    "Pillow",
    "numpy",
    # Linux-only: GNOME/GTK integration
    "PyGObject; sys_platform == 'linux'",
    "dbus-next; sys_platform == 'linux'",
    # macOS-only: PyObjC for activity detection
    "pyobjc-core; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "desktop-notifier",
    "setproctitle",
    "av",

    "openai>=1.2.0",
    "openai-agents>=0.1.0",
    "anthropic",
    "genai-prices",
    "pypdf",
    "blessed>=1.20.0",
    "psutil",
    "tzlocal",
    "python-slugify",
    "rapidfuzz",
    "platformdirs",

    # Audio processing
    "soundcard",
    "soundfile",
    "faster-whisper>=1.0.0",
    "resemblyzer>=0.1.0",

    # Media processing
    "opencv-python",

    # Development tools
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "playwright>=1.40.0",
    "requests",
]

[project.scripts]
sol = "sol:main"

[project.urls]
Homepage = "https://github.com/solpbc/solstone"
Repository = "https://github.com/solpbc/solstone"
Documentation = "https://github.com/solpbc/solstone/blob/main/README.md"
"Bug Tracker" = "https://github.com/solpbc/solstone/issues"

[tool.setuptools.packages.find]
include = ["apps*", "think*", "convey*", "observe*", "muse*"]

[tool.setuptools]
py-modules = ["sol"]

[tool.setuptools.package-data]
apps = ["*/templates/*.html", "*/muse/*.md"]
think = ["*.md", "templates/*.md"]
muse = ["*.md", "*.py"]
observe = ["*.md", "categories/*.md", "transcribe/*.md"]
convey = [
    "templates/*.html",
    "static/*",
]

# Development tools configuration
[tool.black]
target-version = ['py39']
extend-exclude = '''
(
  \.venv
  | scratch
  | logs
  | build
  | dist
)
'''

[tool.isort]
profile = "black"
extend_skip = ["journal", ".venv", "scratch", "logs", "build", "dist"]

# NOTE: flake8 config lives in .flake8 (flake8 does not read pyproject.toml)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", ".venv", "scratch", "logs", "build", "dist"]
ignore_missing_imports = true
ignore_errors = true

[tool.uv]
# resemblyzer -> librosa -> numba: force modern version (old numba only supports Python <3.10)
constraint-dependencies = ["numba>=0.60"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests", "apps"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
timeout = 5
filterwarnings = [
    # Third-party deprecation warnings (Python 3.14+)
    "ignore:codecs.open.* is deprecated:DeprecationWarning",
    "ignore:.*_UnionGenericAlias.* is deprecated:DeprecationWarning",
    "ignore:.*DefaultEventLoopPolicy.* is deprecated:DeprecationWarning",
]
